fix: Cleans up some of the flexbox styling overflow content heights (#683)
Resolves some overflow flexbox issues where the flexbox heights are not extending to the height of the scrolling app-content container.

Resolves AB#16458

--- a/src/react/components/pages/homepage/homePage.scss
+++ b/src/react/components/pages/homepage/homePage.scss
@@ -1,21 +1,23 @@
 @import '../../../../assets/sass/theme.scss';
 
 .app-homepage {
-    height: 100%;
+    flex-grow: 1;
     display: flex;
     flex-direction: row;
+    min-height: fit-content;
 
     &-main {
+        display: flex;
         flex-grow: 1;
 
         ul {
-            height: 100%;
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: center;
             margin: auto;
-            
+            flex-wrap: wrap;
+
             padding: 0;
 
             li {
@@ -36,6 +38,8 @@
     }
 
     &-recent {
-        min-width: 20vw;
+        flex-basis: 20vw;
+        min-width: 250px;
+        max-width: 300px;
     }
 }
